# rusty-jam-08-21

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
assets/: map.ldtk  simple_map.ldtk
src/: main.rs  tags.rs  ui.rs
src/entity_class/: creature.rs  door.rs  enemy.rs  gold.rs  health.rs  indexer.rs  lifetime.rs  mod.rs  movement.rs  patrol_path.rs  player.rs  projectile.rs  start_location.rs
src/map/: map_colliders.rs  map_loader.rs  mod.rs  utils.rs
