[package]
name = "rusty-jam-08-21"
version = "0.1.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/Carlton-Perkins/rusty-jam-08-21"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.5.0", default-features = false, features = []}
#bevy_egui = "0.6.2"
#bevy-inspector-egui = "0.6.1"
bevy_retrograde = { version = "0.2.0", features = ["audio", "text", "physics", "ldtk", "epaint"] }
log = "0.4.14"
hex = "0.4.3"
glam = "0.13.1"
heron = "0.11.0"

# pretty_env_logger = "0.4.0"

# Enable optimizations for library code
[profile.dev.package."*"]
opt-level = 3